# nautobot-app-netbox-importer

./: .bandit.yml  .cookiecutter.json  .dockerignore  .flake8  .gitignore  .travis.yml  .yamllint.yml  CHANGELOG.md  FAQ.md  LICENSE  README.md  invoke.example.yml  invoke.mysql.yml  mkdocs.yml  pull-request.md  pyproject.toml  tasks.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  upstream_testing.yml
changes/: 130.added  146.fixed  157.documentation  157.housekeeping  165.added  165.fixed  166.added  166.changed  168.added  170.dependencies  171.fixed  174.fixed  182.dependencies  182.housekeeping  190.housekeeping  191.fixed  197.added  200.added  201.changed  202.added  203.added  204.added  205.added  206.added  207.added  208.added  209.added  212.added  213.added  214.added  215.changed  216.changed  217.added  218.dependencies  218.housekeeping  219.dependencies
development/: Dockerfile  creds.example.env  dev.env  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.minio.yml  docker-compose.yml  nautobot_config.py  towncrier_template.j2
docs/: requirements.txt
docs/admin/: compatibility_matrix.md  install.md  uninstall.md  upgrade.md
docs/admin/release_notes/: version_1.0.md  version_1.1.md  version_1.2.md  version_1.3.md  version_1.4.md  version_2.0.md  version_2.1.md  version_2.2.md
docs/dev/: arch_decision.md  caching.md  content_types_mapping.md  contributing.md  customizations.md  data_flow.md  demo.md  dev_environment.md  faq.md  generator.md  import_order.md  importer.md  placeholders.md  primary_keys.md  release_checklist.md
docs/dev/code_reference/: api.md  diffsync.md  index.md  package.md
docs/dev/code_reference/fixtures/: README.md
docs/diagrams/: data_flow.md  generate_primary_key.md  generator_erd.md
docs/user/: app_getting_started.md  app_overview.md  app_use_cases.md  faq.md  model_mappings.md  summary.md  tagging_issues.md
nautobot_netbox_importer/: __init__.py  base.py  command_utils.py  jobs.py  summary.py  urls.py  utils.py
nautobot_netbox_importer/api/: __init__.py
nautobot_netbox_importer/diffsync/: __init__.py  adapter.py  base.py  locations.py  nautobot.py  netbox.py  source.py  summary.py
nautobot_netbox_importer/diffsync/adapters/: __init__.py  abstract.py  nautobot.py  netbox.py
nautobot_netbox_importer/diffsync/models/: __init__.py  abstract.py  auth.py  base.py  cables.py  circuits.py  content_types.py  contenttypes.py  custom_fields.py  dcim.py  extras.py  ipam.py  locations.py  object_change.py  references.py  tags.py  tenancy.py  users.py  validation.py  virtualization.py
nautobot_netbox_importer/generator/: __init__.py  base.py  exceptions.py  fields.py  nautobot.py  source.py  summary.py
nautobot_netbox_importer/management/commands/: import_netbox.py  import_netbox_json.py  import_netbox_objectchange_json.py
nautobot_netbox_importer/tests/: __init__.py  test_api.py  test_basic.py  test_import.py  test_import_objectchange.py  test_pks.py  test_sync.py
nautobot_netbox_importer/tests/fixtures/: README.md  dump.sql  nautobot-v2.1  nautobot_expectations.yaml  nautobot_objectchange_expectations.yaml  netbox_dump.json  netbox_dump_invalid_rack.json  netbox_objectchange_dump.json
nautobot_netbox_importer/tests/fixtures/3.0/: circuits.circuit.json  circuits.circuittermination.json  circuits.circuittype.json  circuits.provider.json  circuits.providernetwork.json  dcim.cable.json  dcim.consoleport.json  dcim.consoleporttemplate.json  dcim.device.json  dcim.devicebay.json  dcim.devicetype.json  dcim.frontport.json  dcim.frontporttemplate.json  dcim.interface.json  dcim.interfacetemplate.json  dcim.location.json  dcim.locationtype.json  dcim.manufacturer.json  dcim.platform.json  dcim.powerfeed.json  dcim.poweroutlet.json  dcim.poweroutlettemplate.json  dcim.powerpanel.json  dcim.powerport.json  dcim.powerporttemplate.json  dcim.rack.json  dcim.rearport.json  dcim.rearporttemplate.json  extras.customfield.json  extras.role.json  extras.status.json  ipam.prefix.json  ipam.rir.json  ipam.vlan.json  ipam.vlangroup.json  summary.json  summary.txt  tenancy.tenant.json  tenancy.tenantgroup.json  virtualization.cluster.json  (+4 more)
nautobot_netbox_importer/tests/fixtures/3.1/: circuits.circuit.json  circuits.circuittermination.json  circuits.circuittype.json  circuits.provider.json  circuits.providernetwork.json  dcim.cable.json  dcim.consoleport.json  dcim.consoleporttemplate.json  dcim.device.json  dcim.devicebay.json  dcim.devicebaytemplate.json  dcim.devicetype.json  dcim.frontport.json  dcim.frontporttemplate.json  dcim.interface.json  dcim.interfacetemplate.json  dcim.location.json  dcim.locationtype.json  dcim.manufacturer.json  dcim.platform.json  dcim.powerfeed.json  dcim.poweroutlet.json  dcim.poweroutlettemplate.json  dcim.powerpanel.json  dcim.powerport.json  dcim.powerporttemplate.json  dcim.rack.json  dcim.rackreservation.json  dcim.rearport.json  dcim.rearporttemplate.json  dcim.virtualchassis.json  extras.customfield.json  extras.role.json  extras.status.json  extras.tag.json  extras.taggeditem.json  ipam.ipaddress.json  ipam.prefix.json  ipam.rir.json  ipam.vlan.json  (+10 more)
nautobot_netbox_importer/tests/fixtures/3.2/: circuits.circuit.json  circuits.circuittermination.json  circuits.circuittype.json  circuits.provider.json  circuits.providernetwork.json  dcim.cable.json  dcim.consoleport.json  dcim.consoleporttemplate.json  dcim.device.json  dcim.devicebay.json  dcim.devicebaytemplate.json  dcim.devicetype.json  dcim.frontport.json  dcim.frontporttemplate.json  dcim.interface.json  dcim.interfacetemplate.json  dcim.location.json  dcim.locationtype.json  dcim.manufacturer.json  dcim.platform.json  dcim.powerfeed.json  dcim.poweroutlet.json  dcim.poweroutlettemplate.json  dcim.powerpanel.json  (+29 more)
nautobot_netbox_importer/tests/test_adapters/: test_netbox.py
netbox-checker/: pyproject.toml  run.sh
netbox-checker/netbox_checker/: __init__.py  checker.py
(+942 files in other folders)
